# Thesis

./: README.md
Thesis-Mujoco/: CITATION.cff  README  Robotics.py  __init__.py  pyproject.toml  setup.py
Thesis-Mujoco/Abb_robot/: __init__.py
Thesis-Mujoco/Abb_robot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Thesis-Mujoco/Abb_robot/env/: robot_env.py
Thesis-Mujoco/Abb_robot/env/assets/: LICENSE.md
Thesis-Mujoco/Abb_robot/env/assets/fetch/: bin_pick.xml  robot.xml  shared.xml
Thesis-Mujoco/Abb_robot/env/fetch/: __init__.py  bin_pick.py  fetch_env.py
Thesis-Mujoco/Abb_robot/env/utils/: mujoco_utils.py
Thesis-Mujoco/log/HER_Dense/SAC_1/: events.out.tfevents.1717165560.DESKTOP-03N0J3N.172735.0
Thesis-Mujoco/log/HER_Dense/SAC_2/: events.out.tfevents.1717166463.DESKTOP-03N0J3N.179520.0
Thesis-Mujoco/log/HER_Dense/SAC_3/: events.out.tfevents.1717167338.DESKTOP-03N0J3N.186023.0
Thesis-Mujoco/log/HER_sparse/SAC_1/: events.out.tfevents.1717162536.DESKTOP-03N0J3N.150130.0
Thesis-Mujoco/log/HER_sparse/SAC_2/: events.out.tfevents.1717163489.DESKTOP-03N0J3N.157245.0
Thesis-Mujoco/log/HER_sparse/SAC_3/: events.out.tfevents.1717164483.DESKTOP-03N0J3N.164576.0
Thesis-Mujoco/log/PPO_Dense/PPO_1/: events.out.tfevents.1717168259.DESKTOP-03N0J3N.192889.0
Thesis-Mujoco/log/PPO_Dense/PPO_2/: events.out.tfevents.1717169126.DESKTOP-03N0J3N.199286.0
Thesis-Mujoco/log/PPO_Dense/PPO_3/: events.out.tfevents.1717169985.DESKTOP-03N0J3N.205507.0
Thesis-Mujoco/log/PPO_sparse/PPO_1/: events.out.tfevents.1717159972.DESKTOP-03N0J3N.131890.0
Thesis-Mujoco/log/PPO_sparse/PPO_2/: events.out.tfevents.1717160835.DESKTOP-03N0J3N.137997.0
Thesis-Mujoco/log/PPO_sparse/PPO_3/: events.out.tfevents.1717161650.DESKTOP-03N0J3N.143775.0
